--- a/NetworkInventory.Maui/NetworkInventory.Maui.csproj
+++ b/NetworkInventory.Maui/NetworkInventory.Maui.csproj
@@ -67,6 +67,9 @@
 	  <MauiXaml Update="Views\AddDevicePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Controls\DeviceControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\DevicesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
