Repository and DevicesView dependency injection, Search devices from InMemory dependency

--- a/NetworkInventory.Maui/NetworkInventory.Maui.csproj
+++ b/NetworkInventory.Maui/NetworkInventory.Maui.csproj
@@ -64,6 +64,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\NetworkInventory.CoreBusiness\NetworkInventory.CoreBusiness.csproj" />
+	  <ProjectReference Include="..\NetworkInventory.Plugins.DataStore.InMemory\NetworkInventory.Plugins.DataStore.InMemory.csproj" />
+	  <ProjectReference Include="..\NetworkInventory.UseCases\NetworkInventory.UseCases.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Views\AddDevicePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
