--- a/NetworkInventory.Plugins.DataStore.SQLite/NetworkInventory.Plugins.DataStore.SQLite.csproj
+++ b/NetworkInventory.Plugins.DataStore.SQLite/NetworkInventory.Plugins.DataStore.SQLite.csproj
@@ -25,4 +25,9 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\NetworkInventory.CoreBusiness\NetworkInventory.CoreBusiness.csproj" />
+	  <ProjectReference Include="..\NetworkInventory.UseCases\NetworkInventory.UseCases.csproj" />
+	</ItemGroup>
+
 </Project>
